# flask-ai

./: __init__.py  constants.py  data_preparation.py  health_routes.py  health_utils.py  lstm_model.h5  ocr_service.py  prediction_service.py  pyproject.toml  req2.txt  requirements.txt  sample_health_data.csv  scaler.save  train_model.py  train_models.py
health_models/: diabetes_model.pkl  kidney_model.pkl  liver_model.pkl  mentalhealth_model.pkl
